ESQL|DS: type the format_reader profile payload
Replace the generic Map<String,Object> format_reader carrier on the
external-source operator status with a typed FormatReaderStatus
NamedWriteable, contributed per format module (parquet, orc, ndjson,
csv) via the data-source plugin's getNamedWriteables(). The operator
status writes/reads it with writeOptionalNamedWriteable under the same
(unreleased) esql_external_source_profile transport version, so no new
version is needed and no Map shape ever ships on the wire.

Parquet's per-column PerColumnStatus now rides directly as a typed
Map<String,PerColumnStatus>, dropping the toMap() leaf-flattening the
generic-map carrier required. read_nanos rollup reads a typed accessor
instead of a string key lookup.